[package]
name = "pefapi"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.35.1",features=["full"]}
tokio-serial = "5.4.4"
tokio-util = {version="0.7.10",features=["codec"]}
futures = "0.3.29"
confy = "0.5.1"
bytes = "1.5.0"
hex = "0.4.3"
serde = {version="1.0.195",features=["derive"]}
serde-hex = "0.1.0"
serde_derive = "1.0.195"
defaults = "0.2.0"
crossbeam-channel = "0.5"
byteorder = "1.5.0"
bytebuffer = "2.2.0"
[dependencies.openssl]
version = "0.10" 
features = ["vendored"] 

