[package]
name = "pefbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
eframe = {version="0.25.0",features = ["persistence"]}
egui_extras = { version = "0.25.0", features = ["image"] }
serde = {version="1.0.193",features = ["derive"] }
serde_derive = "1.0.193"
winit = "0.29.7"

pefapi = {path = "../pefapi"}
tokio-serial = "5.4.4"
tokio-util = {version="0.7.10",features=["codec"]}
futures = "0.3.29"
defaults = "0.2.0"
tokio = {version="1.35.1",features=["full"]}
thiserror = "1.0.56"
crossbeam-channel = "0.5"

[dependencies.openssl]
version = "0.10" 
features = ["vendored"] 
