[package]
name = "pefgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
eframe = {version="0.23.0",features = ["persistence"]}
egui_extras = "0.23.0"
# egui = "0.23.0"
egui_plot = "0.23.0"
plot = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
